# ableton-mcp-server

./: .gitignore  .mcp.json  CLAUDE.md  DEVELOPMENT.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: plugin.json
.github/workflows/: publish.yml  tests.yml
ableton/: __init__.py
server/: __init__.py  api_reference.json  api_reference.md  server.py
skills/ableton-guide/: SKILL.md
tests/: test_api_reference.py  test_remote_script.py
