[project]
name = "ableton-live-mcp"
version = "0.1.0"
description = "Control Ableton Live with AI through the Model Context Protocol"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Tim Ridgely", email = "tim@ridge.ly"}
]
license = "MIT"
keywords = ["ableton", "live", "mcp", "model-context-protocol", "music", "daw", "midi"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio",
    "Intended Audience :: Developers",
]
dependencies = [
    "mcp[cli]>=1.3.0",
]

[project.scripts]
ableton-live-mcp = "server.server:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["server"]

[tool.setuptools.package-data]
server = ["api_reference.json", "api_reference.md"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
